# DrugSim_PTransE

./: .gitignore  CMakeLists.txt  PCRA.py  makefile
PTransE_RNN/: Test_TransE_path  Test_TransE_path.cpp  Train_TransE_path  Train_TransE_path.cpp
PTransE_add/: Test_TransE_path  Test_TransE_path.cpp  Test_TransE_path_1121.cpp  Test_TransE_path_backup.cpp  Test_TransE_path_noPR.cpp  Train_TransE_path  Train_TransE_path.cpp  core.23743  core.26161  run.sh
PTransE_mul/: Test_TransE_path  Test_TransE_path.cpp  Test_TransE_path_backup.cpp  Train_TransE_path  Train_TransE_path.cpp  run.sh
data/: e1_e2.txt  entity2id.txt  relation2id.txt  test.txt  train.txt  valid.txt
